--- a/wep-app/src/app/nav/nav.component.html
+++ b/wep-app/src/app/nav/nav.component.html
@@ -8,20 +8,20 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="'/'">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Moments</a>
+        <a class="nav-link">Moments</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Notifications</a>
+        <a class="nav-link" >Notifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
+        <a class="nav-link">Messages</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" (submit)="search()">
-      <input class="form-control mr-sm-2" style="min-width: 299px;background-color: #f5f8fa;border-radius: 21px; padding: 8px 32px 8px 20px;"
+      <input class="form-control mr-sm-2"
              type="text" placeholder="Search Twitter" aria-label="Search"
              [(ngModel)]="searchKeyword" name="searchKeyword">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
